<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize">

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtBtc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/txtBTC"
                    android:textColor="@color/textColor"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/view"
                    android:layout_width="100dp"
                    android:layout_height="8dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/custom_grey_rectangular" />

                <TextView
                    android:id="@+id/txtEnthreum_balance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:gravity="right"
                    android:lineSpacingExtra="55dp"
                    android:includeFontPadding="true"
                    android:lineSpacingMultiplier="0.8"
                    android:paddingBottom="5dp"
                    android:text="@string/txtEnthreum_balance"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtEth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/txtEth"
                    android:textColor="@color/textColor"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/view1"
                    android:layout_width="50dp"
                    android:layout_height="8dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/custom_blue_rectangular" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtLtc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/txtLtc"
                    android:textColor="@color/textColor"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/view2"
                    android:layout_width="80dp"
                    android:layout_height="8dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/custom_grey_rectangular" />

                <TextView
                    android:id="@+id/number_txt"
                    
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:gravity="right"
                    android:includeFontPadding="true"
                    android:lineSpacingMultiplier="0.8"
                    android:paddingBottom="5dp"
                    android:text="@string/number_txt"
                    android:textColor="@color/txtExColor"
                    android:textSize="40sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtStm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/txtStm"
                    android:textColor="@color/textColor"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/view3"
                    android:layout_width="10dp"
                    android:layout_height="8dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/custom_grey_rectangular" />

                <TextView
                    android:id="@+id/dollar_number_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:gravity="right"
                    android:includeFontPadding="true"
                    android:lineSpacingMultiplier="0.8"
                    android:paddingBottom="5dp"
                    android:text="@string/dollar_number_txt"
                    android:textColor="@color/textColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtDsh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/txtDsh"
                    android:textColor="@color/textColor"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/view4"
                    android:layout_width="20dp"
                    android:layout_height="8dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/custom_grey_rectangular" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="right"
                android:orientation="horizontal">

                <TextView

                    android:id="@+id/txt1Eth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/txt1ETH"
                    android:textColor="@color/textColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/txtNumberBtc"
                    android:textColor="@color/editTextColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="right"
                android:orientation="horizontal">

                <TextView

                    android:id="@+id/txtDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/day"
                    android:textColor="@color/textColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/red_rectangular_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="8dp"
                    android:text="0.98 %"
                    android:textColor="@color/editTextColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="right"
                android:orientation="horizontal">

                <TextView

                    android:id="@+id/txtWeek"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/week"
                    android:textColor="@color/textColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/green_rectangluar_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="8dp"
                    android:text="0.98 %"
                    android:textColor="@color/editTextColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/linearLayoutSend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/sendicon" />

                    <TextView
                        android:id="@+id/txtSend"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/send"
                        android:textColor="@color/editTextColor"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayoutReceive"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
android:layout_gravity="center"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/receiveicon" />

                    <TextView
                        android:id="@+id/txtReceive"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/receive"
                        android:textColor="@color/editTextColor"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayoutBuy_Sell"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
android:layout_gravity="center"
                        android:src="@drawable/transfericon" />

                    <TextView
                        android:id="@+id/txtBuy_Sell"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/buy_sell"
                        android:textColor="@color/editTextColor"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>


            </LinearLayout>

            <TextView

                android:id="@+id/txtTransaction_History"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:lineSpacingExtra="50dp"
                android:lineSpacingMultiplier="1.8"
                android:gravity="center"
                android:text="@string/transaction_history"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:src="@drawable/outgoing1" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txtDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:text="@string/date"

                            android:textColor="@color/textColor"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="3dp"
                            android:layout_height="20dp"
                            android:layout_marginLeft="10dp"

                            android:background="@color/textColor" />


                        <TextView
                            android:id="@+id/txtTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"

                            android:text="@string/time"
                            android:textColor="@color/textColor"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/txtEthNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="10dp"
                        android:text="0.084316  ETH"
                        android:textColor="@color/textColor"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:paddingBottom="40dp"

                        />
                </LinearLayout>


            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>