<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@color/editTextColor"></android.support.v7.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:id="@+id/txtAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1.3"
                    android:text="@string/amount"
                    android:textColor="@color/textColor"
                    android:textSize="30sp"
                    android:textStyle="bold" />


                <EditText
                    android:id="@+id/editTextAmount"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:enabled="false"
                    android:gravity="end"
                    android:hint="0.0"
                    android:maxLength="8"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/editTextColor"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:windowSoftInputMode="stateHidden" />

                <TextView
                    android:id="@+id/txtEth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="0.4"

                    android:gravity="end"
                    android:text="@string/txtEth"
                    android:textColor="@color/editTextColor"
                    android:textSize="20sp"
                    android:windowSoftInputMode="stateHidden" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="="
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/editTextUsdAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:backgroundTint="@android:color/transparent"
                    android:gravity="center"
                    android:hint="0.0"
                    android:maxLength="8"
                    android:enabled="false"
                    android:maxLines="1"
                    android:textColor="@color/textColor"
                    android:textSize="20sp"
                    android:windowSoftInputMode="stateHidden" />

                <TextView
                    android:id="@+id/txtUsd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:backgroundTint="@android:color/transparent"
                    android:text="@string/usd"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="vertical">

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonOne"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:text="1"
                        android:textColor="@color/textColor"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/buttonTwo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:text="2"
                        android:textColor="@color/textColor"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/buttonThree"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:text="3"
                        android:textColor="@color/textColor"
                        android:textSize="30sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonFour"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:text="4"
                        android:textColor="@color/textColor"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/buttonFive"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:text="5"
                        android:textColor="@color/textColor"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/buttonSix"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:text="6"
                        android:textColor="@color/textColor"
                        android:textSize="30sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonSeven"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:text="7"
                        android:textColor="@color/textColor"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/buttonEight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:text="8"
                        android:textColor="@color/textColor"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/buttonNine"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:text="9"
                        android:textColor="@color/textColor"
                        android:textSize="30sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/buttonClear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:scaleType="centerInside"
                        android:src="@drawable/backspace" />

                    <Button
                        android:id="@+id/buttonZero"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:text="0"
                        android:textColor="@color/textColor"
                        android:textSize="30sp" />

                    <Button

                        android:id="@+id/buttonDot"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:text="."
                        android:textColor="@color/textColor"
                        android:textSize="30sp" />

                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/imgForwardIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:src="@drawable/forwardchevron" />
        </LinearLayout>
    </ScrollView>




</LinearLayout>
